force-app/main/default/objects/Form_Template__c/fields/Form__c.field-meta.xml
<CustomField>
    <fullName>Form__c</fullName>
    <label>Form Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>List View</fullName>
            </value>
            <value>
                <fullName>Record Form</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>