force-app/main/default/objects/Form_Template__c/fields/Form_Object__c.field-meta.xml
<CustomField>
    <fullName>Form_Object__c</fullName>
    <label>Form Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>