force-app/main/default/objects/Form_Template__c/fields/Form_Section_Type__c.field-meta.xml
<CustomField>
    <fullName>Form_Section_Type__c</fullName>
    <label>Form Section Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accordion</fullName>
            </value>
            <value>
                <fullName>Vertical Tab</fullName>
            </value>
            <value>
                <fullName>Horizonatal Tab</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>